# DS-ML-portfolio

./: README.md  gitignore.txt
portfolio-search/: README.md  app.py  requirements.txt
portfolio-search/docs/: db.md  function_reference.md  project-description.md  search_engines_literature_review.md
portfolio-search/src/: db.py  preprocessing.py  search_engine.py
project-search/: README.md  app.py  requirements.txt
project-search/docs/: project-description.md
project-search/src/: utils.py
race_model/python/: pyproject.toml
race_model/python/src/race_model/data_sources/notebooks/: fetch_sessions_example.ipynb
race_model/python/src/race_model/data_sources/openf1/: __init__.py  handle_requests.py  laps.py  sessions.py  stints.py
