[project]
name = "race-model"
version = "0.1.0"
description = "Data and machine learning pipeline for motorsport race modelling, including telemetry ingestion, modelling and training."
authors = [
    {name = "David Crespo"}
]
requires-python = ">=3.12"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "requests (>=2.33.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
